--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#e4f9f5">
 		<meta http-equiv="Content-Security-Policy" content="
 				default-src 'self'; 
-				script-src 'self' https://ajax.googleapis.com 'unsafe-inline'; 
+				script-src 'nonce-jknorf123oijew1' 'nonce-applpie' 'strict-dynamic' 'self' https://ajax.googleapis.com 'unsafe-inline'; 
 				style-src 'self' https://fonts.googleapis.com; 
 				font-src https://fonts.gstatic.com">
 		<title>Aarav Juneja</title>
@@ -16,6 +16,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 		<link rel="icon" href="favicon.ico">
 		<link rel="manifest" href="app.webmanifest">
+
+		<script nonce="applpie"></script>
 
 		<noscript>
 			<!-- <link rel="stylesheet" 
@@ -75,6 +77,6 @@
 		<p class="copyright">© <span id="date"></span> Aarav Juneja.</p>
 		</div>
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script> -->
-		<script src="./js/index.min.js" defer></script>
+		<script src="./js/index.min.js" defer nonce="jknorf123oijew1"></script>
 	</body>
 </html>
